[package]
name = "benson"
publish = false
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/res-3/benson"
repository = "https://github.com/res-3/benson"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serenity = { version = "^0.10.2", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "unstable_discord_api",
    "builder",
    "cache",
    "http",
    "utils",
    "voice",
    "cache",
    "standard_framework",
    "framework"
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
clap = "2.33"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.2"
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "current", version = "0.2", features = [
    "serenity-rustls",
    "gateway",
    "default"
] }
thiserror = "1.0"
autojson = "0.1"
chrono = "0.4"
chrono-humanize = "0.2"
hostname = "0.3"
uwuify = "0.2"

[profile.release]
lto = true
codegen-units = 1
